tests/data/placebo/test_rdscluster_sg_filter/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "71.163.79.221/32"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-4a9ff72e", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-f9cc4d9f"
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "664c8b73-0349-412d-b4ce-b68dd997dea0", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Sun, 06 Nov 2016 22:05:08 GMT"
            }
        }
    }
}
